tests/compile_pass/public_headers/export_json.cpp
#include <pb/core/export_json.hpp>

int pb_public_header_export_json() { return 0; }
